# crashbytes-result

./: .coverage  README.md  pyproject.toml
.github/workflows/: ci.yml
src/crashbytes_result/: __init__.py  _core.py
tests/: test_result.py
