[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crashbytes-result"
version = "1.0.0"
description = "A practical Result type for Python — Ok, Err, and pattern matching."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "CrashBytes", email = "crashbytes@users.noreply.github.com" }]
keywords = ["result", "ok", "err", "monad", "error-handling", "pattern-matching"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "mypy", "ruff"]

[project.urls]
Homepage = "https://github.com/CrashBytes/crashbytes-result"
Repository = "https://github.com/CrashBytes/crashbytes-result"
Issues = "https://github.com/CrashBytes/crashbytes-result/issues"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["crashbytes_result"]

[tool.coverage.report]
fail_under = 90
